[package]
name = "subster"
version = "0.1.0"
edition = "2024"

[dependencies]
osb = { path = "osb" }

clap = { version = "4.5.24", features = ["derive"] }
toml = "1.0.3"
anyhow = "1.0.102"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
env_logger = "0.11.9"
libsecret = "0.7.0"
gio = "0.20.7"
ratatui = "0.30.0"
xdg = "2.5.2"
tui-input = "0.15.0"
crossterm = "0.29.0"
