[package]
name = "osb"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
secrecy = { version = "0.10.3", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
lazy_static = "1.5.0"